[package]
name = "ndim"
version = "0.1.2"
edition = "2021"
description = "N-dimensional array for numerals in Rust similar to NumPy"
repository = "https://github.com/noobsiecoder/ndim"
readme = "README.md"
license = "MIT"
keywords = ["data-structure", "array", "matrix"]
categories = ["data-structures", "science"]
documentation = "https://docs.rs/ndim"

[dependencies]
num-traits = "0.2.19"
thiserror = "2.0.11"

[dev-dependencies]
image = "0.25.2"
